--- a/views/home.html
+++ b/views/home.html
@@ -11,18 +11,18 @@
     <link rel="stylesheet" href="./css/styles.css">
     <title>Kitchening</title>
 </head>
-<body>
+<body class="body-main">
     <header class="main-header">
         <img class="logo" src="../image/logo.jpg" alt="">
         <a class="menu" href=""><i class="fa-solid fa-bars"></i></a>
         <nav class="nav">
             <ul class="main-nav" type="none">
-                <li><a href="">HOME</a></li>
-                <li><a href="">QUIENES</a></li>
-                <li><a href="">SERVICIOS</a></li>
-                <li><a href="">PORTFOLIO</a></li>
-                <li><a href="">SUCURSALES</a></li>
-                <li><a href="">CONTACTO</a></li>
+                <li class="cuadro-nav"><a href="">HOME</a></li>
+                <li class="cuadro-nav"><a href="">QUIENES</a></li>
+                <li class="cuadro-nav"><a href="">SERVICIOS</a></li>
+                <li class="cuadro-nav"><a href="">PORTFOLIO</a></li>
+                <li class="cuadro-nav"><a href="">SUCURSALES</a></li>
+                <li class="cuadro-nav"><a href="">CONTACTO</a></li>
             </ul>
         </nav>    
     </header>
@@ -30,7 +30,7 @@
     <main class="main">
         <!-- BANER  -->
         
-        <section>
+        <section class="sec-baner">
             <img class="baner" src="./image/img-banner.jpg" alt="">
         </section>
 
@@ -45,7 +45,7 @@
                     <a class="zoom" href="">AMPLIAR FOTO</a>
                 </div>
                 <h2>Lorem, ipsum dolor.</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero commodi fuga dolore voluptatibus a aut.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis, soluta velit mollitia nisi delectus distinctio et quo quibusdam cupiditate explicabo dolorum nulla aliquam obcaecati cumque fugit similique, praesentium, provident error!</p>
                 <a class="more" href="">ver más</a>
             </article>
         <!-- seccion 2 -->
@@ -109,12 +109,12 @@
     <footer class="footer">
         <nav>
             <ul class="footer-nav" type="none">
-                <li><a href="">Home</a></li>
-                <li><a href="">Quienes</a></li>
-                <li><a href="">Servicios</a></li>
-                <li><a href="">Portfolio</a></li>
-                <li><a href="">Sucursales</a></li>
-                <li><a href="">Contacto</a></li>
+                <li class="fot-text"><a class="ultimo" href="">Home</a></li>
+                <li class="fot-text"><a class="ultimo" href="">Quienes</a></li>
+                <li class="fot-text"><a class="ultimo" href="">Servicios</a></li>
+                <li class="fot-text"><a class="ultimo" href="">Portfolio</a></li>
+                <li class="fot-text"><a class="ultimo" href="">Sucursales</a></li>
+                <li class="fot-text"><a class="ultimo" href="">Contacto</a></li>
             </ul>
         </nav>
     </footer>
